# 2040_usbcdc

./: CMakeLists.txt  tusb_config  usb_descriptors.c
src/: main.c  tusb_config
